--- a/.ebextensions/app.config
+++ b/.ebextensions/app.config
@@ -6,3 +6,5 @@ option_settings:
     DATABASE_URI: "ReplaceWithDatabaseURI"
     NODE_ENV: "production"
     SERVER_URL: "http://myappname.elasticbeanstalk.com/parse"
+  aws:elasticbeanstalk:container:nodejs:
+    NodeCommand: "npm start"
