--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "Parse Server",
-  "description": "A Parse API server using the parse-server module",
-  "repository": "https://github.com/yongjhih/docker-parse-server",
+  "name": "Parse Server Example",
+  "description": "An example Parse API server using the parse-server module",
+  "repository": "https://github.com/ParsePlatform/parse-server-example",
   "logo": "https://avatars0.githubusercontent.com/u/1294580?v=3&s=200",
   "keywords": ["node", "express", "parse"],
   "env": {
@@ -18,8 +18,8 @@
       "value": "myMasterKey"
     },
     "SERVER_URL": {
-      "description": "URL to connect to your Heroku instance (leave as http://localhost)",
-      "value": "http://localhost/parse"
+      "description": "URL to connect to your Heroku instance (update with your app's name + PARSE_MOUNT)",
+      "value": "http://yourappname.herokuapp.com/parse"
     }
   },
   "image": "heroku/nodejs",
