add node module and update index.js

--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "express": "~4.11.x",
     "kerberos": "~0.0.x",
     "parse": "~1.8.0",
-    "parse-server": "*"
+    "parse-server": "*",
+    "parse-server-azure-storage": "^1.1.0",
+    "nodemon": "^1.8.1",
+    "docker-links": "^1.0.2",
+    "dotenv": "^2.0.0"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon --watch /parse/cloud index.js"
   },
   "engines": {
     "node": ">=4.3"
