--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
         "express": "~4.11.x",
         "kerberos": "~0.0.x",
         "parse": "~1.8.0",
-        "parse-server": "*",
+        "parse-server": "^2.3.1",
         "parse-server-azure-storage": "^1.1.0",
         "nodemon": "^1.8.1",
         "better-npm-run": "0.0.13",
         "docker-links": "^1.0.2",
-        "dotenv": "^2.0.0"
+        "dotenv": "^2.0.0",
+        "moment": "^2.17.1",
+        "underscore": "^1.8.3",
+        "jimp": "~0.2.21"
     },
     "scripts": {
         "start": "better-npm-run start:dev",
@@ -26,7 +29,7 @@
     },
     "betterScripts": {
         "start:dev": {
-            "command": "nodemon --watch /parse/cloud index.js",
+            "command": "nodemon --watch ./cloud index.js",
             "env": {
                 "NODE_ENV": "development"
             }
