--- a/.env
+++ b/.env
@@ -1,23 +1,23 @@
-DATABASE_URI=
-APP_ID=
-APP_NAME=
-PARSE_MOUNT=
+DATABASE_URI=mongodb://localhost:27017/invito
+APP_ID=63psQ0dZvBEkzwAGOYlE6Sq6BuvGWdk2mxqqxwVN
+APP_NAME=invito
+PARSE_MOUNT=/1
 COLLECTION_PREFIX=
-MASTER_KEY=
-CLIENT_KEY=
-REST_API_KEY=
-DOTNET_KEY=
-JAVASCRIPT_KEY=
-FILE_KEY=
-FACEBOOK_APP_IDS=
-SERVER_URL=
-MAX_UPLOAD_SIZE=
+MASTER_KEY=y6obNHJchwbOvA0yiKuttz8lmOs4SY6ZjmUiK0fF
+CLIENT_KEY=sMg7lemPkb98lbQzdvElThFjjaNakdOQkCJ9oEno
+REST_API_KEY=3TF1eVmZPxxFe9R6iQvA1lS5ZfOGo9udod6q8ipz
+DOTNET_KEY=bwkeVv5DGsJQ0Mdc3vKApbu6yvjiRpJZaJDlqVSw
+JAVASCRIPT_KEY=4gnafcd3oZ2plsD71P5D8cSfFtVl1LogIdOF31D4
+FILE_KEY=4ef5d482-d406-4c4a-a813-256911ef8972
+FACEBOOK_APP_IDS=159534731224745
+SERVER_URL=http://localhost:1337/1
+MAX_UPLOAD_SIZE=20mb
 ENABLE_ANON_USERS=
-ALLOW_CLIENT_CLASS_CREATION=
+ALLOW_CLIENT_CLASS_CREATION=false
 PARSE_EXPERIMENTAL_CONFIG_ENABLED=
 PUBLIC_SERVER_URL=
 TESTING=
-TRUST_PROXY=
+TRUST_PROXY=0
 GCM_ID=
 GCM_KEY=
 FCM_KEY=
@@ -28,7 +28,7 @@ PRODUCTION_CERT=
 PRODUCTION_KEY=
 DEV_PFX=
 DEV_PASSPHRASE=
-DEV_BUNDLE_ID=
+DEV_BUNDLE_ID=com.quanghoang.invito
 DEV_CERT=
 DEV_KEY=
 VERIFY_USER_EMAILS=
@@ -45,7 +45,7 @@ EMAIL_PASSWORD_RESET_BODY=
 S3_ACCESS_KEY=
 S3_SECRET_KEY=
 S3_BUCKET=
-S3_DIRECT=
+S3_DIRECT=true
 GCP_PROJECT_ID=
 GCP_KEYFILE_PATH=
 GCS_BUCKET=
